Add description field to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "tagger"
 version = "0.0.0"
+description = "Development"
 authors = ["Richard Cook <rcook@rcook.org>"]
 edition = "2018"
 
