--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ absolute-path = { git = "https://github.com/rcook/absolute-path.git", rev = "aca
 clap = "2.33.3"
 #dirs = "3.0.1"
 #generic-array = "0.14.4"
-rusqlite = { version = "0.24.2", features = ["bundled"] } # https://www.davideaversa.it/blog/build-rusqlite-windows/
+rusqlite = { version = "0.24.2", features = ["array", "bundled"] } # https://www.davideaversa.it/blog/build-rusqlite-windows/
 sha2 = "0.9.3"
